--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
     <div class="container">
                 <div class="profile">
-            <img src="C:\Users\jeeva\OneDrive\Desktop\img.jpg" alt="G.Jeevamani" class="profile-img">
+            <img src="https://img.freepik.com/free-vector/woman-floral-traditional-costume_1308-176159.jpg?t=st=1742633956~exp=1742637556~hmac=f3c787dd9be10c78a3b2e49727e6d6c66f04b99590431e4aa2edc02bfb0dd4d8&w=740" alt="G.Jeevamani" class="profile-img">
 <h1>G.Jeevamani</h1>
 <h3>Sasi Institute of Technology and Engineering</h3>
 <h3>Email:<a href="mailto:jeevamani.ganusula@sasi.ac.in">jeevamani.ganusula@sasi.ac.in</a></h3>
